@@ -15,7 +15,7 @@ CGEN = -g -std=c99
 CDEF = -D_POSIX_SOURCE -D_DEFAULT_SOURCE
 else
 ifeq ($(OS),Darwin)
-CGEN = -std=c99
+CGEN = -g -std=c99
 CWRN = -Weverything -Wno-format-nonliteral -Wno-switch-enum 
 CWRN += -Wno-format-security -Werror
 else
