@@ -11,8 +11,8 @@
 (cat) ; "","Line 1: syntax error, unexpected ')' ')'",""
 (cat (func)) ; "","Line 1: Undefined function 'func' 0",""
 (cat "1" (func)) ; "","Line 1: Undefined function 'func' 0",""
-(set @strict 0) (cat (func)) ; "","Line 1: Undefined function 'func' 0",""
-(set @strict 0) (cat "1" (func)) ; "","Line 1: Undefined function 'func' 0",""
+(set @strict 0) (cat (func)) ; "","",""
+(set @strict 0) (cat "1" (func)) ; "","1",""
 (cat (safe)) ; "","Line 1: syntax error, unexpected SAFE 'safe'",""
 (cat "1" (safe)) ; "","Line 1: syntax error, unexpected SAFE 'safe'",""
 ("%ld" (cat 1)) ; "","Line 1: Format string type mismatch '%ld' 0",""
